# ADAPT-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
adapt_agent/: __init__.py
adapt_agent/adapters/: __init__.py  base.py
adapt_agent/adapters/crewai/: __init__.py
adapt_agent/adapters/langgraph/: __init__.py
adapt_agent/adapters/semantic_kernel/: __init__.py
adapt_agent/adversarial/: __init__.py
adapt_agent/cli/: __init__.py
adapt_agent/core/: __init__.py  memory.py  middleware.py  policy.py  trust.py  types.py
adapt_agent/evaluation/: __init__.py
adapt_agent/observability/: __init__.py
adapt_agent/optimization/: __init__.py
adapt_agent/patches/: __init__.py
adapt_agent/security/: __init__.py  firewall.py  taint_tracker.py
tests/: __init__.py  test_core.py  test_security.py
