[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-agent"
version = "0.1.0"
description = "ADAPT-Agent: Adversarial Defense & Policy Training for LLM Agents - A comprehensive library for LLM agent optimization and security"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ADAPT-Agent Contributors"}
]
keywords = [
    "llm",
    "agents",
    "security",
    "optimization",
    "adversarial",
    "policy",
    "trust",
    "ai-safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
langgraph = [
    "langgraph>=0.0.1",
]
semantic-kernel = [
    "semantic-kernel>=0.3.0",
]
crewai = [
    "crewai>=0.1.0",
]
all = [
    "adapt-agent[dev,langgraph,semantic-kernel,crewai]",
]

[project.urls]
Homepage = "https://github.com/CodeHalwell/ADAPT-Agent"
Repository = "https://github.com/CodeHalwell/ADAPT-Agent"
Issues = "https://github.com/CodeHalwell/ADAPT-Agent/issues"

[project.scripts]
adapt-agent = "adapt_agent.cli:main"

[tool.setuptools]
packages = ["adapt_agent"]

[tool.setuptools.package-dir]
adapt_agent = "adapt_agent"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=adapt_agent --cov-report=term-missing"
